# 100-days-python-bootcamp

./: .gitignore  README.md  pip_freeze_linux.txt  pyproject.toml  requirements.txt
day_01_variables/: band_name_generator.py
day_02_data_types/: tip_calculator.py
day_03_control_flow_logical_operators/: python_pizza.py  treasure_island_game.py
day_04_randomization_lists/: rock_paper_scissors.py  smart_rock_paper_scissors.py
day_05_loops/: password_generator.py
day_06_functions/: hurdle.py  maze.py
day_07_hangman/: hangman_game.py
day_08_function_parameters_caesar_cipher/: caesar_cipher.py
day_09_dictionaries_nesting_secret_auction/: secret_auction.py
day_100_analyze_deaths_police_us/: Fatal_Force.ipynb
day_10_functions_with_outputs/: calculator.py
day_11_blackjack_capstone_project/: blackjack_recursion.py  blackjack_tutorial.py
day_12_scope_number_guessing/: number_guessing_game.py
day_14_higher_lower/: main.py
day_15_coffee_machine/: main.py
day_16_object_oriented_programming/: main.py  menu.py  money_machine.py
day_17_quiz_project/: data.py  main.py  my_main.py  question_model.py  quiz_brain.py
day_18_turtle_gui/: main.py
day_19_instances_state_higher_order_functions/: etch_a_sketch.py  turtles_race.py
day_20_21_snake_game/: food.py  main.py  my-main.py  scoreboard.py  snake.py
day_22_pong_game/: ball.py  main.py  my-main.py  paddle.py  scoreboard.py
day_23_turtle_crossing_game/: car_manager.py  main.py  player.py  scoreboard.py
day_24_files_directories_paths/: main.py
day_25_csv_pandas/: intro_csv_pandas.py  main.py  (+2 more)
(+173 files in other folders)
