[project]
name = "100-days-python-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "anywidget==0.9.21",
    "beautifulsoup4==4.13.5",
    "bootstrap-flask==2.5.0",
    "flask==3.1.2",
    "flask-ckeditor==1.0.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "gunicorn==23.0.0",
    "jinja2==3.1.6",
    "matplotlib==3.10.7",
    "notebook==7.4.7",
    "pandas==2.3.2",
    "pillow==12.0.0",
    "plotly==6.4.0",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "scikit-learn>=1.8.0",
    "scipy==1.16.3",
    "seaborn>=0.13.2",
    "selenium==4.35.0",
    "spotipy==2.25.1",
    "sqlalchemy==2.0.44",
    "twilio==9.8.0",
    "werkzeug==3.1.3",
    "wtforms[email]==3.2.1",
]
